--- a/.env
+++ b/.env
@@ -17,4 +17,19 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=
+APP_DEBUG=1
 ###< symfony/framework-bundle ###
+
+DATABASE_DRIVER=pdo_pgsql
+DATABASE_HOST=127.0.0.1
+DATABASE_PORT=5432
+DATABASE_NAME=symfony_ddd
+DATABASE_USER=postgres
+DATABASE_PASSWORD=password
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+# MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
