--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,5 @@
 controllers:
-    resource:
-        path: ../src/Controller/
-        namespace: App\Controller
-    type: attribute
+  resource: ../src/**/Infrastructure/UI/Controller/*
+  type: attribute
+  options:
+    expose: true
