--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,24 +1,61 @@
-# This file is the entry point to configure your own services.
-# Files in the packages/ subdirectory configure your dependencies.
-
-# Put parameters here that don't need to change on each machine where the app is deployed
-# https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
 
 services:
-    # default configuration for services in *this* file
+    Symfony\Component\DependencyInjection\ContainerInterface: '@service_container'
+
     _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        autowire: true
+        autoconfigure: true
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
-    App\:
-        resource: '../src/'
-        exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
-            - '../src/Kernel.php'
+    _instanceof:
+        App\Shared\Domain\Bus\Command\CommandHandler:
+          tags: ['app.command_handler']
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+        App\Shared\Domain\Bus\Query\QueryHandler:
+          tags: ['app.query_handler']
+
+    doctrine.dbal.debug_middleware:
+      abstract: true
+
+    app.custom_connection:
+      class: Doctrine\DBAL\Connection
+      factory: [ App\Shared\Infrastructure\Doctrine\ConnectionFactory, create ]
+      arguments:
+        - '@doctrine.dbal.custom_connection'
+        - '%env(APP_ENV)%'
+        - '@doctrine.debug_data_holder'
+        - '@debug.stopwatch'
+
+    app.custom_entity_manager:
+        class: Doctrine\ORM\EntityManagerInterface
+        factory: [ App\Shared\Infrastructure\Doctrine\EntityManagerFactory, create ]
+        arguments:
+            - '@app.custom_connection'
+            - '%env(APP_ENV)%'
+        tags:
+            - { name: doctrine.entity_manager, connection: 'custom' }
+        public: true
+
+    Doctrine\ORM\EntityManagerInterface: '@app.custom_entity_manager'
+
+  # Wire
+    App\Shared\:
+      resource: '../src/Shared'
+
+    App\Users\:
+      resource: '../src/Users'
+
+    # Tagging
+    App\Shared\Infrastructure\Bus\Event\InMemorySymfonyEventBus:
+      arguments: [ !tagged_iterator app.domain_event_subscriber ]
+      lazy: true
+
+    # Definitions
+    App\Shared\Infrastructure\Bus\Command\InMemorySymfonyCommandBus:
+      arguments: [ !tagged_iterator app.command_handler ]
+
+    App\Shared\Infrastructure\Bus\Query\InMemorySymfonyQueryBus:
+      arguments: [ !tagged_iterator app.query_handler ]
+
+    # Implementations
+    App\Shared\Domain\Bus\Event\EventBus: '@App\Shared\Infrastructure\Bus\Event\InMemorySymfonyEventBus'
