--- a/.env
+++ b/.env
@@ -23,9 +23,9 @@ APP_DEBUG=1
 DATABASE_DRIVER=pdo_pgsql
 DATABASE_HOST=127.0.0.1
 DATABASE_PORT=5432
-DATABASE_NAME=symfony_ddd
-DATABASE_USER=postgres
-DATABASE_PASSWORD=password
+DATABASE_NAME=foo
+DATABASE_USER=bar
+DATABASE_PASSWORD=baz
 
 ###> symfony/messenger ###
 # Choose one of the transports below
