--- a/composer.json
+++ b/composer.json
@@ -76,6 +76,10 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.73.1",
+        "phpunit/phpunit": "^12.0",
+        "symfony/browser-kit": "7.2.*",
+        "symfony/css-selector": "7.2.*",
+        "symfony/phpunit-bridge": "^7.2",
         "symfony/stopwatch": "7.2.*",
         "symfony/web-profiler-bundle": "7.2.*"
     }
